--- a/MathematischeMethoden/MathematischeMethoden.vcxproj
+++ b/MathematischeMethoden/MathematischeMethoden.vcxproj
@@ -116,7 +116,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Algorithm.cpp" />
-    <ClCompile Include="DataManagement.cpp" />
+    <ClCompile Include="DataUtils.cpp" />
     <ClCompile Include="Edge.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="main.cpp" />
@@ -124,7 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Algorithm.h" />
-    <ClInclude Include="DataManagement.h" />
+    <ClInclude Include="DataUtils.h" />
     <ClInclude Include="Edge.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="Node.h" />
