--- a/MathematischeMethoden/MathematischeMethoden.vcxproj
+++ b/MathematischeMethoden/MathematischeMethoden.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <ClCompile Include="Algorithm.cpp" />
     <ClCompile Include="DataUtils.cpp" />
+    <ClCompile Include="DisjoinSets.cpp" />
     <ClCompile Include="Edge.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="main.cpp" />
@@ -125,6 +126,7 @@
   <ItemGroup>
     <ClInclude Include="Algorithm.h" />
     <ClInclude Include="DataUtils.h" />
+    <ClInclude Include="DisjointSets.h" />
     <ClInclude Include="Edge.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="Node.h" />
