--- a/MathematischeMethoden/MathematischeMethoden.vcxproj.filters
+++ b/MathematischeMethoden/MathematischeMethoden.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="DataUtils.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="DisjoinSets.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graph.h">
@@ -48,6 +51,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="DataUtils.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="DisjointSets.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
